--- a/damda/app/src/main/res/layout/activity_main.xml
+++ b/damda/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
                 android:src="@drawable/logo_title" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
@@ -35,9 +36,7 @@
         android:layout_below="@+id/toolbar_division"
         android:layout_above="@+id/nav_division"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
+        android:layout_height="match_parent"/>
     <LinearLayout
         android:id="@+id/nav_division"
         android:background="@color/colorDivision"
