--- a/damda/app/src/main/res/layout/activity_login.xml
+++ b/damda/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
             android:hint="@string/password"
             android:inputType="textPassword"/>
         <Button
-            android:id="@+id/login_button"
+            android:id="@+id/login"
             android:text="@string/signin_email"
             android:theme="@style/ButtonStyle"
             android:layout_width="match_parent"
@@ -58,7 +58,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="80dp"/>
         <com.kakao.usermgmt.LoginButton
-            android:id="@+id/kakao_login"
+            android:id="@+id/login_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
