--- a/damda/app/src/main/res/layout/activity_login.xml
+++ b/damda/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
             android:text="@string/signin_email"
             android:theme="@style/ButtonStyle" />
 
-        <Button8
+        <Button
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
