--- a/damda/app/src/main/res/layout/fragment_detail.xml
+++ b/damda/app/src/main/res/layout/fragment_detail.xml
@@ -2,8 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#AA2244"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/albumName"
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:text="TextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_photo"
