--- a/damda/app/src/main/res/layout/list_item_photo.xml
+++ b/damda/app/src/main/res/layout/list_item_photo.xml
@@ -17,6 +17,8 @@
             android:id="@+id/iv_image"
             android:layout_width="140dp"
             android:layout_height="140dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/avatar" />
