S02P31B205-60 | Change Background Color of AlbumListFragment

--- a/damda/app/src/main/res/layout/fragment_photo_list.xml
+++ b/damda/app/src/main/res/layout/fragment_photo_list.xml
@@ -2,19 +2,38 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#AA2244"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/albumTitle"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="48dp">
+
+        <TextView
+            android:id="@+id/albumTitle"
+            android:layout_width="83dp"
+            android:layout_height="20dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.075"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.526" />
+
+        <Button
+            android:id="@+id/saveAlbum"
+            android:layout_width="104dp"
+            android:layout_height="45dp"
+            android:text="@string/saveAlbum"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/albumTitle"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/selectionToolbar"
@@ -27,4 +46,5 @@
         android:layout_marginTop="44dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
