--- a/damda/app/src/main/res/layout/list_item_album.xml
+++ b/damda/app/src/main/res/layout/list_item_album.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:text="앨범이름"
+            android:text="@string/album_title"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/btn_album"
             app:layout_constraintStart_toStartOf="@+id/btn_album"
