--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddFamilyActivity">
+    tools:context=".activity.AddFamilyActivity">
     <ImageView
         android:layout_above="@+id/signin_layout"
         android:layout_alignParentTop="true"
