S02P31B205-59 | Add share image

--- a/damda/app/src/main/res/layouts/activity/layout/image_fullscreen.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/image_fullscreen.xml
@@ -3,5 +3,5 @@
     android:id="@+id/ivFullscreenImage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
-    android:scaleType="centerCrop" />
+    android:contentDescription="Image"
+    android:scaleType="fitCenter" />
