--- a/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
@@ -42,12 +42,20 @@
         android:id="@+id/btn_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
         android:clickable="true"
-        android:text="Button"
+        android:text="Share"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:text="Delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
