--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
@@ -13,45 +13,68 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:contentDescription="logo"
             android:src="@drawable/logo_title" />
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
-        android:id="@+id/toolbar_division"
+        android:id="@+id/top_division"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@+id/my_toolbar"
-        android:background="@color/colorDivision"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/my_toolbar"
         android:orientation="horizontal"/>
-
-    <ImageView
-        android:id="@+id/addphoto_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@+id/toolbar_division"
-        android:layout_margin="8dp"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/editText"
-        android:layout_below="@+id/toolbar_division"
-        android:layout_toRightOf="@+id/addphoto_image"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <EditText
-            android:gravity="top"
-            android:id="@+id/addphoto_edit_explain"
-            android:hint="@string/hint_image_content"
+        android:layout_height="match_parent"
+        android:layout_below="@id/top_division"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
-    <Button
-        android:id="@+id/addphoto_btn_upload"
-        android:text="@string/upload_image"
-        android:layout_toRightOf="@+id/addphoto_image"
-        android:layout_below="@+id/editText"
-        android:theme="@style/ButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/addphoto_image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
+                android:layout_margin="8dp"
+                android:contentDescription="사진을 등록해주세요" />
+
+            <LinearLayout
+                android:id="@+id/image_division"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/editText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <EditText
+                    android:id="@+id/addphoto_edit_explain"
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:autofillHints="사진 설명"
+                    android:gravity="top"
+                    android:hint="@string/hint_image_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/addphoto_btn_upload"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:text="@string/upload_image"
+                android:theme="@style/ButtonStyle" />
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
