S02P31B205-59 | Add photo delete

--- a/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
@@ -58,4 +58,26 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
+
+    <Button
+        android:id="@+id/btn_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/common_google_play_services_update_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_photo"
+        app:layout_constraintStart_toEndOf="@+id/btn_delete"
+        app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
+
+    <EditText
+        android:id="@+id/et_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvGalleryTitle"
+        app:layout_constraintTop_toTopOf="@+id/tvGalleryTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
