S02P31B205-59 | Add photo delete

--- a/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/fragment_photo_detail.xml
@@ -39,12 +39,12 @@
         tools:text="Gallery Image Title" />
 
     <Button
-        android:id="@+id/btn_photo"
+        android:id="@+id/btn_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
         android:clickable="true"
-        android:text="Share"
+        android:text="@string/sharePhoto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
@@ -53,20 +53,10 @@
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="38dp"
-        android:text="Delete"
+        android:layout_marginStart="30dp"
+        android:text="@string/deletePhoto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
-
-    <Button
-        android:id="@+id/btn_update"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/common_google_play_services_update_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btn_photo"
-        app:layout_constraintStart_toEndOf="@+id/btn_delete"
         app:layout_constraintTop_toBottomOf="@+id/tvGalleryTitle" />
 
     <EditText
@@ -75,9 +65,19 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/tvGalleryTitle"
         app:layout_constraintTop_toTopOf="@+id/tvGalleryTitle" />
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/savePhoto"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_share"
+        app:layout_constraintStart_toEndOf="@+id/btn_delete"
+        app:layout_constraintTop_toBottomOf="@+id/et_update" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
