--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
@@ -11,7 +11,7 @@
         app:title="가족 목록"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,7 +25,7 @@
     </RelativeLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_action_button"
+        android:id="@+id/add_member_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
