--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
@@ -53,8 +53,18 @@
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="70dp"
+            android:layout_marginBottom="40dp"
             android:text="요청취소하기"
+            android:textColor="@color/colorWhite" />
+
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="70dp"
+            android:text="로그아웃"
             android:textColor="@color/colorWhite" />
     </LinearLayout>
 </RelativeLayout>
