--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_album_list.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_album_list.xml
@@ -30,7 +30,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="5dp"
-            android:text="가족 추가하기"
+            android:text="앨범 만들기"
             android:theme="@style/ButtonStyle" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
