S02P31B205-77 | Add Request list

--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -41,16 +41,16 @@
         android:text="TextView" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/list_request"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="요청 목록" />
 
     <Button
         android:id="@+id/button5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="가족 목록" />
 
     <Button
         android:id="@+id/button6"
