--- a/damda/app/src/main/res/layouts/activity/layout/activity_login.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_login.xml
@@ -24,14 +24,19 @@
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:maxLength="20"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="@string/email" />
+            android:hint="@string/email"
+            android:inputType="text"/>
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:maxLength="20"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:hint="@string/password"
