--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_photo.xml
@@ -39,8 +39,7 @@
             <ImageView
                 android:id="@+id/addphoto_image"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:minHeight="100dp"
+                android:layout_height="wrap_content"
                 android:scaleType="fitCenter"
                 android:adjustViewBounds="true"
                 android:layout_margin="8dp"
