--- a/damda/app/src/main/res/layouts/item/layout/list_item_album.xml
+++ b/damda/app/src/main/res/layouts/item/layout/list_item_album.xml
@@ -21,20 +21,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btn_album"
+        <ImageView
+            android:id="@+id/album_image"
             android:layout_width="93dp"
             android:layout_height="90dp"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:background="@drawable/album"
+            android:contentDescription="@string/album_image"
             app:layout_constraintBottom_toTopOf="@+id/tv_album_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/album" />
 
         <TextView
             android:id="@+id/tv_album_title"
@@ -44,9 +43,9 @@
             android:layout_marginBottom="8dp"
             android:text="@string/album_title"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/btn_album"
-            app:layout_constraintStart_toStartOf="@+id/btn_album"
-            app:layout_constraintTop_toBottomOf="@+id/btn_album" />
+            app:layout_constraintEnd_toEndOf="@+id/album_image"
+            app:layout_constraintStart_toStartOf="@+id/album_image"
+            app:layout_constraintTop_toBottomOf="@+id/album_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
