--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -47,7 +47,7 @@
         android:text="요청 목록" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/family_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="가족 목록" />
