--- a/damda/app/src/main/res/drawable/round_green.xml
+++ b/damda/app/src/main/res/drawable/round_green.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid
-        android:color="@color/enableButton" />
-    <corners
-        android:radius="8dp"/>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- 테두리 설정: 두께, 색상 -->
+    <stroke
+        android:width="1dp"
+        android:color="#92B5D9" />
 
 </shape>
