--- a/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    android:background="@color/black"
-    android:gravity="center_horizontal"
-    android:layout_height="match_parent">
-
-    <TextView
-        android:layout_marginTop="15dp"
-        android:layout_width="wrap_content"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".activity.LoginActivity">
+    <ImageView
+        android:layout_above="@+id/signin_layout"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:textColor="@color/white"
-        android:text="@string/join_name"
-        />
+        android:src="@drawable/logo_title"/>
 
+    <LinearLayout
+        android:id="@+id/signin_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="-9dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editEmailLayout"
-        android:textColorHint="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -27,30 +31,25 @@
             android:hint="@string/email"
             android:id="@+id/editEmail"
             android:layout_width="match_parent"
-            android:backgroundTint="@color/white"
             android:maxLines="1"
             android:maxLength="20"
             android:inputType="text"
-            android:textColor="@color/white"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/btnCheckExistID"
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:text="중복체크"
-        android:layout_gravity="center_vertical|right"
         android:textColor="@color/white"
-        android:background="@drawable/round_green"
-        android:layout_height="50dp" />
+        android:layout_height="40dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editPWDLayout"
         android:layout_width="match_parent"
         android:hint="@string/pwd"
-        android:textColorHint="@color/white"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content">
 
         <EditText
@@ -58,10 +57,8 @@
             android:layout_width="match_parent"
             android:maxLines="1"
             android:maxLength="20"
-            android:backgroundTint="@color/white"
             android:inputType="textPassword"
-            android:textColor="@color/white"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,46 +68,25 @@
         android:id="@+id/editPWDConfirmLayout"
         android:layout_width="match_parent"
         android:hint="@string/pwd_confirm"
-        android:textColorHint="@color/white"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
 
         <EditText
             android:id="@+id/editPWDConfirm"
             android:layout_width="match_parent"
             android:maxLines="1"
             android:maxLength="20"
-            android:backgroundTint="@color/white"
             android:inputType="textPassword"
-            android:textColor="@color/white"
             android:layout_height="match_parent"
             />
     </com.google.android.material.textfield.TextInputLayout>
-
-
-<!--    <com.google.android.material.textfield.TextInputLayout-->
-<!--        android:id="@+id/editEmailLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:textColorHint="@color/white"-->
-<!--        android:hint="@string/email"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <EditText-->
-<!--            android:id="@+id/editEmail"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:maxLines="1"-->
-<!--            android:maxLength="20"-->
-<!--            android:inputType="textEmailAddress"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:layout_height="match_parent"-->
-<!--            />-->
-<!--    </com.google.android.material.textfield.TextInputLayout>-->
-
 
     <Button
         android:id="@+id/btnDone"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="100dp"
         android:text="@string/join_done"/>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
