--- a/damda/app/src/main/res/values/styles.xml
+++ b/damda/app/src/main/res/values/styles.xml
@@ -5,11 +5,11 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/bluebell</item>
     </style>
 
     <style name="ButtonStyle" parent="Widget.AppCompat.Button.Colored">
-        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="colorButtonNormal">@color/bluebell</item>
     </style>
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
@@ -25,7 +25,7 @@
     </style>
     <style name="AppTheme.TextFloatLabelAppearance" parent="TextAppearance.Design.Hint">
         <!-- Floating label appearance here -->
-        <item name="android:textColor">#C3FBD3</item>
+        <item name="android:textColor">@color/gray</item>
         <item name="android:textSize">15sp</item>
     </style>
 
@@ -39,6 +39,5 @@
         <item name="colorControlActivated">@color/enableButton</item>
         <item name="colorSwitchThumbNormal">@color/gray</item>
         <item name="android:colorForeground">#757575</item>
-
     </style>
 </resources>
