--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
@@ -8,22 +8,32 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        app:title="가족 목록"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:elevation="4dp"
+        app:title="가족 목록" />
     
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbar"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         >
         <TextView
             android:id="@+id/member_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
             android:text="@string/add_info"
             />
+        <View
+            android:layout_below="@+id/member_info"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#000000"/>
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_below="@+id/member_info"
             android:id="@+id/member_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
