--- a/damda/app/src/main/res/layouts/activity/layout/list_item_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_member.xml
@@ -2,7 +2,11 @@
     android:id="@+id/list_item_memeber_layout"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:paddingBottom="0dp"
+    android:background="?attr/selectableItemBackground"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/member_name"
@@ -13,10 +17,5 @@
         android:textSize="15dp"
         android:gravity="center_vertical"
         android:textColor="@color/black"/>
-<!--    <View-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0.5dp"-->
-<!--        android:background="@color/black" />-->
-
 
 </LinearLayout>
