--- a/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_request.xml
@@ -12,20 +12,26 @@
         android:text="제목"
         android:textSize="15dp"
         android:gravity="center_vertical"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black"
+        />
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+    />
     <Button
         android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="번호 선택"
-        android:layout_weight="0.1" />
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="수락"
+        />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Toast에서 확인"
-        android:layout_weight="0.1" />
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:text="거절"
+        />
 <!--    <View-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="0.5dp"-->
