S02P31B205-92 | Add album delete

--- a/damda/app/src/main/res/values/styles.xml
+++ b/damda/app/src/main/res/values/styles.xml
@@ -42,4 +42,10 @@
         <item name="colorSwitchThumbNormal">@color/gray</item>
         <item name="android:colorForeground">#757575</item>
     </style>
+    <style name="BasePopupMenu" parent="Widget.AppCompat.PopupMenu">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/bluebell</item>
+    </style>
 </resources>
