--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_family.xml
@@ -19,25 +19,33 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="-9dp"
         android:orientation="vertical">
-
+        <TextView
+            android:id="@+id/req_ing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginRight="25dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/wait"/>
         <Button
             android:id="@+id/make_family"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="35dp"
+            android:layout_marginBottom="30dp"
             android:text="새로운 가족 앨범 만들기"
+            android:textColor="@color/white"
             android:theme="@style/ButtonStyle" />
-
         <EditText
             android:id="@+id/req"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="가족 id또는 email을 입력해주세요" />
+            android:inputType="text"
+            android:hint="가족 번호 또는 담장 이메일" />
 
         <Button
             android:id="@+id/req_btn"
@@ -45,7 +53,9 @@
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
             android:text="요청하기"
+            android:background="@color/bluebell"
             android:textColor="@color/colorWhite" />
         <Button
             android:id="@+id/delete_btn"
@@ -53,9 +63,11 @@
             android:layout_height="40dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/round_green"
             android:text="요청취소하기"
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/bluebell"/>
 
         <Button
             android:id="@+id/logout"
@@ -64,7 +76,8 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="70dp"
+            android:background="@drawable/round_green"
             android:text="로그아웃"
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/bluebell"/>
     </LinearLayout>
 </RelativeLayout>
