--- a/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_main.xml
@@ -9,17 +9,17 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/my_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="35dp">
+        android:layout_height="50dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
-                android:src="@drawable/logo_title" />
+                android:layout_marginBottom="1dp"
+                android:src="@drawable/logo_main" />
         </RelativeLayout>
     </androidx.appcompat.widget.Toolbar>
     <LinearLayout
