--- a/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_signup.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".activity.LoginActivity">
     <ImageView
+        android:paddingTop="4dp"
         android:layout_above="@+id/signin_layout"
         android:layout_alignParentTop="true"
         android:layout_width="match_parent"
@@ -62,8 +63,6 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/editPWDConfirmLayout"
         android:layout_width="match_parent"
@@ -81,12 +80,54 @@
             />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nameLayout"
+        android:layout_width="match_parent"
+        android:hint="이름"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp">
+
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="match_parent"
+            android:maxLines="1"
+            android:maxLength="20"
+            android:inputType="text"
+            android:layout_height="match_parent"
+            />
+    </com.google.android.material.textfield.TextInputLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
+        android:paddingLeft="4dp"
+        android:text="생일"
+        android:gravity="center_vertical"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <CheckBox
+            android:id="@+id/is_lunar"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:text="음력"/>
+
+        <DatePicker
+            android:id="@+id/dataPicker"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:datePickerMode="spinner"
+            android:calendarViewShown="false"/>
+
+    </LinearLayout>
+
+        <Button
         android:id="@+id/btnDone"
         android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="30dp"
         android:text="@string/join_done"/>
     </LinearLayout>
 </RelativeLayout>
