S02P31B205-88 | Edit User layout

--- a/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_add_member.xml
@@ -46,7 +46,7 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:contentDescription="@string/favorite"
-        app:backgroundTint="#009688"
+        app:backgroundTint="@color/bluebell"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@id/toolbar"
         app:srcCompat="@drawable/baseline_add_black_24dp" />
