--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -1,79 +1,167 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content" >
+    <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:gravity="center_horizontal"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
-
-    <TextView
-        android:id="@+id/user_info"
-        android:layout_marginTop="15dp"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:textColor="@color/white"
-        android:text="@string/user_info"
-        />
-
+        android:gravity="center">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="30dp"
+            android:orientation="vertical"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="가족 번호"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:orientation="vertical"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:text="담장"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                />
+        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="푸시 알람 설정" />
+        android:layout_height="30dp"
+        android:gravity="center_vertical"
+        android:text="가족 설정" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/push_alarm"
-        android:textColorHint="@color/white"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="0.5dp"
+        android:background="@color/gray"/>
 
-    <Button
-        android:id="@+id/button"
+    <LinearLayout
+        android:id="@+id/list_item_memeber_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="푸시 알림" />
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="구성원 보기"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/family_btn"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="등록된 가족 얼굴"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/list_request"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="요청 목록"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+    </LinearLayout>
+
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="30dp"
+        android:gravity="center_vertical"
+        android:text="어플설정" />
 
-    <Button
-        android:id="@+id/list_request"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="요청 목록" />
-
-    <Button
-        android:id="@+id/family_btn"
+        android:layout_height="0.5dp"
+        android:background="@color/gray"/>
+    <LinearLayout
+        android:id="@+id/alarm"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="가족 목록" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="푸시 알람 설정"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+    </LinearLayout>
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
-
-    <Button
-        android:id="@+id/button3"
+        android:layout_height="30dp"
+        android:gravity="center_vertical"
+        android:text="계정 설정" />
+    <View
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
-
-    <TextView
-        android:id="@+id/textView4"
+        android:layout_height="0.5dp"
+        android:background="@color/gray"/>
+    <LinearLayout
+        android:id="@+id/EditUser"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="개인 정보 수정"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/logout"
@@ -81,6 +169,5 @@
         android:layout_height="wrap_content"
         android:text="로그아웃" />
 
-
-
 </LinearLayout>
+</ScrollView>
