--- a/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/activity_cropper.xml
@@ -10,16 +10,16 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        app:title="가족 추가하기"
+        app:title="앨범 추가하기"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <ImageView
-        android:id="@+id/imagePreview"
+        android:id="@+id/preview"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginTop="10dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/no_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
