--- a/damda/app/src/main/res/layouts/activity/layout/list_item_member.xml
+++ b/damda/app/src/main/res/layouts/activity/layout/list_item_member.xml
@@ -16,5 +16,18 @@
         android:textSize="15dp"
         android:gravity="center_vertical"
         android:textColor="@color/black"/>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+    <TextView
+        android:id="@+id/connect_account"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        android:text="선택 안함"
+        android:textSize="15dp"
+        android:gravity="center_vertical"
+        android:textColor="@color/bluebell"/>
 
 </LinearLayout>
