--- a/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
+++ b/damda/app/src/main/res/layouts/fragment/layout/fragment_user.xml
@@ -8,51 +8,94 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <LinearLayout
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
+    <TextView
+        android:layout_marginTop="4dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center">
-        <LinearLayout
+        android:layout_height="30dp"
+        android:gravity="center_vertical"
+        android:text="가족 정보" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/gray"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="가족 번호"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="가족 번호"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                />
-        </LinearLayout>
-        <LinearLayout
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/family_id"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/bluebell"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="담장"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:orientation="vertical"
-            android:gravity="center">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:text="담장"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                />
-        </LinearLayout>
+            android:layout_weight="1"/>
+        <TextView
+            android:id="@+id/main_member"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/bluebell"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/family_list"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:padding="5dp"
+        android:background="?attr/selectableItemBackground"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="가족 목록"
+            android:textSize="15sp"
+            android:gravity="center_vertical"
+            android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_next"/>
     </LinearLayout>
 
     <TextView
+        android:layout_marginTop="4dp"
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -64,21 +107,6 @@
         android:layout_height="0.5dp"
         android:background="@color/gray"/>
 
-    <LinearLayout
-        android:id="@+id/list_item_memeber_layout"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="5dp"
-        android:background="?attr/selectableItemBackground"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="구성원 보기"
-            android:textSize="15sp"
-            android:gravity="center_vertical"
-            android:textColor="@color/black"/>
-    </LinearLayout>
     <LinearLayout
         android:id="@+id/family_btn"
         android:layout_width="match_parent"
@@ -93,6 +121,14 @@
             android:textSize="15sp"
             android:gravity="center_vertical"
             android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_next"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/list_request"
@@ -108,10 +144,19 @@
             android:textSize="15sp"
             android:gravity="center_vertical"
             android:textColor="@color/black"/>
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_next"/>
     </LinearLayout>
 
 
     <TextView
+        android:layout_marginTop="4dp"
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="30dp"
@@ -138,6 +183,7 @@
             android:textColor="@color/black"/>
     </LinearLayout>
     <TextView
+        android:layout_marginTop="4dp"
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="30dp"
