--- a/damda/app/src/main/res/values/styles.xml
+++ b/damda/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
         <item name="colorButtonNormal">@color/bluebell</item>
         <item name="android:textSize">16sp</item>
     </style>
+    <style name="DeleteButton" parent="Widget.AppCompat.Button.Colored">
+        <item name="colorButtonNormal">@color/gray</item>
+        <item name="android:textSize">16sp</item>
+    </style>
     <style name="AppTheme.NoActionBar" parent="AppTheme">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
